--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 
         <title>To-Do | Tasks App</title>
 
-        <!-- Pico css-->
+        <!-- Pico css -->
         <link rel = "stylesheet" href = "https://unpkg.com/@picocss/pico@latest/css/pico.min.css"/>
         
         <!-- Font awesome icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" onerror="errorIcon()"/>
 
-        <!-- Custom css-->
+        <!-- Custom css -->
         <link rel = "stylesheet" href = "./style.css"/>
+    
+        <!-- Google AdSense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9541417223565779" crossorigin="anonymous"></script>
     </head>
 
     <!-- Body -->
